# PayAjo

./: AjoPay_PRD.md  Monnify test.postman_collection.json  PayAjo-Pitch-Deck.pptx  PayAjo_PRD.md  landing.md  monnify_api_guide.md  openapi.json  test.md
backend/: .env.example  .gitignore  clear_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4cca1e924c1d_wallet_architecture_v2_users_.py  603bbdd967ab_add_personal_reserved_account_name_to_.py  65cd441e2216_add_otp_codes_table.py  8feaaa7db56f_add_kyc_status_and_has_wallet_to_users.py  affe91a25095_add_fcm_token_to_users.py  c6c6cf076044_initial_setup.py  c9cf5ffeb7d9_add_auto_debit_to_membership.py  cac1a4782411_update_group_and_membership_schemas_to_.py
backend/app/: main.py
backend/app/common/: enums.py  models.py  schemas.py
backend/app/core/: config.py  database.py  events.py  pin_limiter.py  scheduler.py  security.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/chat/: router.py
backend/app/modules/cycle/: auto_debit_service.py  requests_service.py  router.py  service.py
backend/app/modules/group/: models.py  reminder_service.py  router.py  schemas.py  service.py
backend/app/modules/membership/: models.py  router.py  schemas.py
backend/app/modules/notification/: router.py  service.py
backend/app/modules/otp/: __init__.py  models.py  service.py
backend/app/modules/transaction/: __init__.py  models.py
backend/app/modules/user/: models.py  (+3 more)
backend/app/services/: cloudinary.py  email.py  monnify.py  push.py  risk.py  scheduler.py
(+185 files in other folders)
